# ROS

./: Dockerfile.ros2  docker-compose.yml  ros2-start.sh  start.sh  three_paths_comparison.py
perception_ws/: README.md  run_perception.sh  test_tpu_inference.py
perception_ws/src/models/: efficientnet_edgetpu_s_quant_edgetpu.tflite
perception_ws/src/perception_interfaces/: CMakeLists.txt  package.xml
perception_ws/src/perception_interfaces/msg/: DepthImage.msg  DetectedObject.msg  DetectedObjects.msg  PerceptionResult.msg  SegmentedImage.msg  TimingInfo.msg
perception_ws/src/perception_pipeline/: package.xml  setup.py
perception_ws/src/perception_pipeline/config/: rpi5_cpu_config.yaml  rpi5_tpu_config.yaml
perception_ws/src/perception_pipeline/launch/: perception_pipeline.launch.py
perception_ws/src/perception_pipeline/perception_pipeline/: __init__.py  depth_estimator_node.py  image_preprocessor_node.py  object_detector_node.py  perception_manager_node.py  semantic_segmentor_node.py  sensor_input_node.py  timing_analyzer_node.py  tpu_inference.py
